@@ -1,34 +1,28 @@
 VERSION = 0.0.1
 
 MAKALA_SOURCE = \
-    makala/makala.py
+    makala/makala.py \
+    makala/makala_config.py \
+    makala/lambda_config.py \
+    makala/aws/utils.py \
+    setup.py
 
-AWS_UTILS_SOURCE = \
-    makala/aws/utils.py
+GMAKALA_SOURCE = $(MAKALA_SOURCE:.py=.pyc)
 
-PYTHON_PACKAGE_FILES = \
+PACKAGE_FILES = \
     CHANGELOG \
     LICENSE.txt \
-    README.md \
-    setup.py
+    README.md
+
+%.pyc: %.py
+	python -c "import py_compile; py_compile.compile('"$<"', '"$@"')"
 
 PYTHON_PACKAGE = \
     dist/makala-$(VERSION)-py3-none-any.whl
 
-MAKALA_BIN = $(subst .py,.cpython-36.pyc,$(subst makala/, makala/__pycache__/, $(MAKALA_SOURCE)))
+all: $(PYTHON_PACKAGE)
 
-AWS_UTILS_BIN = $(subst .py,.cpython-36.pyc,$(subst makala/aws, makala/aws/__pycache__/, $(AWS_UTILS_SOURCE)))
-
-all: $(MAKALA_BIN) $(AWS_UTILS_BIN) $(PYTHON_PACKAGE)
-
-$(MAKALA_BIN): $(MAKALA_SOURCE)
-	python -m py_compile $<
-
-$(AWS_UTILS_BIN): $(AWS_UTILS_SOURCE)
-	python -m py_compile $<
-
-# require a compile
-$(PYTHON_PACKAGE): $(PACKAGE_FILES) $(MAKALA_BIN)
+$(PYTHON_PACKAGE): $(GMAKALA_SOURCE) $(PACKAGE_FILES)
 	rm -rf build dist
 	python setup.py sdist bdist_wheel
 
@@ -38,9 +32,8 @@ install: $(PYTHON_PACKAGE)
 CLEANFILES = \
     build \
     dist \
-    makala/__pycache__ \
-    makala/aws/__pycache__ \
     makala.egg-info
 
 clean:
 	rm -rf $(CLEANFILES)
+	find . -name '*.pyc' -exec rm {} \;
