@@ -1,0 +1,3 @@
+class LambdaConfig():
+    def __init__():
+        pass
